# haaf-rearc-quest

./: .gitignore  README.md  main.tf  makefile  report_notebook.ipynb
report_lambda/: env.env  pyproject.toml  requirements.txt
report_lambda/src/: lambda_handler.py  utils.py
scrape_lambda/: pyproject.toml  requirements.txt
scrape_lambda/src/: hit_api.py  lambda_handler.py  pull_csvs.py
