[tool.poetry]
name = "report-lambda"
version = "0.1.0"
description = ""
authors = ["Sam Haaf <samhaaf@gmail.com>"]
readme = "README.md"
packages = [{include = "report_lambda"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.91"
pandasql = "^0.7.3"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
