[tool.poetry]
name = "report-lambda"
version = "0.1.0"
description = ""
authors = ["Sam Haaf <samhaaf@gmail.com>"]
readme = "README.md"
packages = [{include = "report_lambda"}]

[tool.poetry.dependencies]
python = "3.9.10"
s3fs = "^2022.8.2"
pandas = "^1.5.0"
numpy = "^1.23.4"
fsspec = "^2022.8.2"
pandasql = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
