[tool.poetry]
name = "scrape_lambda"
version = "0.1.0"
description = ""
authors = ["Sam Haaf <samhaaf@gmail.com>"]
readme = "README.md"
packages = [{include = "sync_lambda"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
boto3 = "^1.24.90"
beautifulsoup4 = "^4.11.1"
promise = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
